--- a/css/styles.css
+++ b/css/styles.css
@@ -34,6 +34,10 @@ a {
     background-color: var(--primary);
 }
 
+.btn, .more {
+    box-shadow: 3px 4px 7px -3px #e9e8e7;
+}
+
 .card {
     border-radius: .5rem;
     box-shadow: 3px 4px 7px -3px #e9e8e7;
