--- a/css/styles.css
+++ b/css/styles.css
@@ -240,43 +240,9 @@ nav {
     margin-right: 2rem;
 }
 
-.header .content img {
-    width: 40%;
-    height: fit-content;
-}
-
 @media(max-width: 800px){
     .name {
         margin: .5rem 0;
-    }
-    
-    .salut {
-        font-size: 2rem;
-        color: var(--links);
-    }
-    
-    .salut span i{
-        font-size: 2rem;
-        color: #37221b;
-    }
-    
-    .name {
-        font-size: 2rem;
-    }
-    
-    .name > span {
-        font-family: 'Fredoka One', cursive;
-        font-size: 2.4rem;
-        color: var(--primary);
-    }
-    
-    .occupation {
-        font-size: 2rem;
-        color: var(--hover);
-    }
-
-    .social a>i {
-        font-size: 2rem;
     }
     
 }
@@ -286,55 +252,24 @@ nav {
         margin: .5rem 0;
     }
     
-    .salut {
-        font-size: 1.6rem;
-        color: var(--links);
-    }
-    
-    .salut span i{
-        font-size: 1.6rem;
-        color: #37221b;
-    }
-    
-    .name {
-        font-size: 1.6rem;
-    }
-    
-    .name > span {
-        font-family: 'Fredoka One', cursive;
-        font-size: 2rem;
-        color: var(--primary);
-    }
-    
-    .occupation {
-        font-size: 1.6rem;
-        color: var(--hover);
-    }
-
-    .social {
-        margin: 1rem 0;
-    }
-    
     .social a:not(:last-child) {
         margin-right: .5rem;
     }
 }
 
-@media(max-width: 500px){
+@media(max-width: 800px){
     .header {
         padding: 100px 0;
     }
 
     .header .content {
         flex-direction: column;
-        align-items: flex-start;
+        align-items: center;
     }
 
     .header .content > img {
         order: -1;
         margin-bottom: 2rem;
-        width: 80%;
-        height: 250px;
     }
 
     .header .content .description {
@@ -343,6 +278,12 @@ nav {
     }
 }
 
+.profile-img {
+    border-radius: 50%;
+    height: 300px;
+    width: 300px;
+    border: 2px solid var(--primary);
+}
 /* End Header */
 
 
